# fl-flwr-app

./: Global_model_round_1  Global_model_round_2  Global_model_round_3  Global_model_round_4  README.md  pyproject.toml  results_json
royel_flwr/: __init__.py  client_app.py  my_strategy.py  server_app.py  task.py  tempCodeRunnerFile.py
wandb/run-20250529_174933-v0sww1ut/files/: requirements.txt  wandb-metadata.json
wandb/run-20250529_175121-3p4uaft1/: run-3p4uaft1.wandb
wandb/run-20250529_175121-3p4uaft1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250529_223806-mygkdkmr/: run-mygkdkmr.wandb
wandb/run-20250529_223806-mygkdkmr/files/: wandb-metadata.json  wandb-summary.json
wandb/run-20250529_224059-oewwbl6y/: run-oewwbl6y.wandb
wandb/run-20250529_224059-oewwbl6y/files/: wandb-metadata.json  wandb-summary.json
