[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "royel-flwr"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0", 
    "torch==2.5.1",
    "torchvision==0.20.1",
    "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "minhazroyel"

# here are the components for the app 

[tool.flwr.app.components]
serverapp = "royel_flwr.server_app:app"
clientapp = "royel_flwr.client_app:app"


# add here the things you need in the context 
[tool.flwr.app.config]
num-server-rounds = 4
fraction-fit = 0.8
local-epochs = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
